[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/Enemies/enemigoFlyer_chaser.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Objects/Enemies/flyer-chaser-enemy1.gd" type="Script" id=2]
[ext_resource path="res://Objects/Enemies/AnimatedSprite.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29, 9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 156.973, 175.157 )

[node name="flyer-chaser-enemy1" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
collision/safe_margin = 0.008
script = ExtResource( 2 )

[node name="hurtBox" type="Area2D" parent="."]
input_pickable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hurtBox"]
modulate = Color( 0, 0.505882, 1, 1 )
self_modulate = Color( 0, 0.109804, 1, 1 )
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = ExtResource( 1 )
playing = true
offset = Vector2( 0, 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="colLeft" type="RayCast2D" parent="."]
position = Vector2( -29, 9 )
enabled = true
cast_to = Vector2( -1, 0 )
collision_mask = 6

[node name="colRight" type="RayCast2D" parent="."]
position = Vector2( 29, 9 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 6

[node name="colTop" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -50 )
collision_mask = 6

[node name="colBottom" type="RayCast2D" parent="."]
enabled = true
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D2" type="Area2D" parent="."]
light_mask = 15375
collision_mask = 0

[node name="fieldOfView" type="CollisionShape2D" parent="Area2D2"]
light_mask = 15375
shape = SubResource( 3 )
[connection signal="body_entered" from="hurtBox" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="hurtBox" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
